...
                      ChimpagneSupply(
                          description = description,
                          quantity = quantity.toIntOrNull() ?: 0,
                          unit = unit))
                  onDismissRequest()
                },
                modifier = Modifier.testTag("supplies_add_button")) {
                  Text(stringResource(id = R.string.chimpagne_add))
                }
          }
        }
      },
      onDismissRequest = { onDismissRequest() })
...
